This behavior is aligned with how SysON handles quotes in `declaredName` fields.
- https://github.com/eclipse-syson/syson/issues/1173[#1173] [export] Fix the textual export of `LiteralString` not wrapped in double quotes.
The user had to explicitly add the double quotes around a `LiteralString` value to ensure the export was producing valid SysML.
This is not the case anymore.

=== Improvements

- https://github.com/eclipse-syson/syson/issues/1061[#1061] [general-view] Add ellipsis on `Packages` label, to provide visual feedback on name overflow.
- https://github.com/eclipse-syson/syson/issues/1007[#1007] Improve direct edit on Feature elements to be able to set the `isDefault` and `isInitial` properties
- https://github.com/eclipse-syson/syson/issues/1033[#1033] [explorer] Make it possible to create a diagram representation directly under a `root Namespace` element
- https://github.com/eclipse-syson/syson/issues/960[#960] [general-view] In the selection dialog of the `subject` creation tool, display possible `Usage` candidates in a tree instead of a list.
- https://github.com/eclipse-syson/syson/issues/1028[#1028] [import] Improve handling of `SuccessionAsUsage` with implicit source feature. 
- https://github.com/eclipse-syson/syson/issues/938[#938] [general-view] Add `Satisfy Requirement Usage` to General View diagram.
A new creation tool is available in the `Requirements` section of the palette, allowing the creation of `Satisfy Requirement Usage` objects.
A new dra & drop tool is available on the diagram, allowing moving `Satisfy Requirement Usage` graphical nodes on the diagram.
- [explorer] The `General View` diagram is now proposed first when creating a diagram.
- https://github.com/eclipse-syson/syson/issues/1024[#1024] [diagrams] Allow `Usage` and `Definition` graphical node labels to be wrapped to handle long names more easily.